...
            "value" : "إرسال"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Submit"
          }
        }
      }
    },
    "9B9-MO-Xau.placeholder" : {
      "comment" : "Class = \"UITextField\"; placeholder = \"-\"; ObjectID = \"9B9-MO-Xau\";",
...
