...
    }
    
    override func awakeFromNib() {
        super.awakeFromNib()
        homeColl?.dataSource = self
        homeColl?.delegate = self
        btnSeeAll?.accessibilityIdentifier = "SeeAll"

    }
    
    // MARK: - Functions
    
    /// Configures the collection view layout based on the section title.
...
